# polymarket-client

./: .gitignore  pyproject.toml
src/polymarket_client/: __init__.py  base.py  client.py  types.py  websocket.py
